update tex files with basis for nuclear norm

--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.bib
@@ -346,3 +346,26 @@
   year={2010}
 }
 
+@article{parikh2014proximal,
+  title={Proximal algorithms},
+  author={Parikh, Neal and Boyd, Stephen and others},
+  journal={Foundations and Trends{\textregistered} in Optimization},
+  volume={1},
+  number={3},
+  pages={127--239},
+  year={2014},
+  publisher={Now Publishers, Inc.}
+}
+
+@article{tibshirani2011solution,
+  title={The solution path of the generalized lasso},
+  author={Tibshirani, Ryan J and Taylor, Jonathan and others},
+  journal={The Annals of Statistics},
+  volume={39},
+  number={3},
+  pages={1335--1371},
+  year={2011},
+  publisher={Institute of Mathematical Statistics}
+}
+
+
