--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -428,7 +428,12 @@ The elastic net \citep{zou2003regression} is a linear combination of the lasso a
 \end{array}
 \end{equation}
 
-The first step to finding the gradient is determining the differentiable space. Let the nonzero indices of $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$ be denoted $I(\boldsymbol\lambda) = \{i | \hat{\theta}_i(\boldsymbol\lambda) \ne 0 \text{ for } i=1,...,p \}$ and let $\boldsymbol I_{I(\boldsymbol \lambda)}$ be a submatrix of the identity matrix with columns $I(\boldsymbol\lambda)$. Since $|\cdot|$ is not differentiable at zero, the directional derivatives of $||\boldsymbol \theta||_1$ only exist along directions spanned by the columns of $\boldsymbol I_{I(\boldsymbol \lambda)}$. Thus the differentiable space at $\boldsymbol \lambda$ is $S_{\boldsymbol{\lambda}} = span(\boldsymbol I_{I(\boldsymbol \lambda)})$.
+The first step to finding the gradient is determining the differentiable space. Let the nonzero indices of $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$ be denoted $I(\boldsymbol\lambda) = \{i | \hat{\theta}_i(\boldsymbol\lambda) \ne 0 \text{ for } i=1,...,p \}$ and let $\boldsymbol I_{I(\boldsymbol \lambda)}$ be a submatrix of the identity matrix with columns $I(\boldsymbol\lambda)$. Since $|\cdot|$ is not differentiable at zero, the directional derivatives of $||\boldsymbol \theta||_1$ only exist along directions spanned by the columns of $\boldsymbol I_{I(\boldsymbol \lambda)}$. Thus the differentiable space at $\boldsymbol \lambda$ is
+$
+S_{\boldsymbol{\lambda}} = span(\boldsymbol I_{I(\boldsymbol \lambda)})
+\label{eq:en_diff_space}
+$.
+
 
 Let $\boldsymbol{X}_{T, I(\boldsymbol\lambda)} = \boldsymbol{X}_T \boldsymbol{I}_{I(\boldsymbol \lambda)}$ and $\boldsymbol{X}_{V, I(\boldsymbol\lambda)}  = \boldsymbol{X}_V \boldsymbol{I}_{I(\boldsymbol \lambda)}$.  The locally equivalent joint optimization problem is
 \begin{equation}
@@ -537,11 +542,11 @@ From \eqref{implicitDifferentiation} and the chain rule, we get that the gradien
 \end{equation}
 where
 \begin{equation}
-\frac{\partial}{\partial \lambda_i} 
+\frac{\partial}{\partial \boldsymbol{\lambda}} 
 \begin{bmatrix}
-\hat{\boldsymbol{\beta}}^{1}(\boldsymbol{\lambda})\\
+\hat{\boldsymbol{\beta}}^{(1)}(\boldsymbol{\lambda})\\
 ...\\
-\hat{\boldsymbol{\beta}}^{|J(\boldsymbol{\lambda})|}(\boldsymbol{\lambda})\\
+\hat{\boldsymbol{\beta}}^{(|J(\boldsymbol{\lambda})|)}(\boldsymbol{\lambda})\\
 \end{bmatrix}
 = 
 \boldsymbol{H}(\boldsymbol\lambda)^{-1}
@@ -620,16 +625,17 @@ The Hessian $\boldsymbol H(\boldsymbol \lambda)$ and the matrix $\boldsymbol C(\
 \subsubsection{Low-Rank Matrix Completion}\label{sec:matrix_completion}
 
 In this example, we move away from the simple regression framework and consider matrix-valued data with partially observed entries. The goal in these \emph{so called} matrix-completion problems is to reconstruct the rest of the matrix based on structural assumptions of the matrix. There are many applications where such problems come up, including collaborative filtering \citet{netflix} and robust principle components analysis \citet{candes2011robust}. 
-%In collaborative filtering problems, the goal is to infer user ratings on products given user ratings on a subset of the products \citet{netflix}. In robust principal components analysis, we decompose the observed matrix into a low-rank matrix and a sparse ``noise'' matrix \citet{candes2011robust}. 
-In these problems it is popular to assume a low rank structure and reconstruct the matrix by minimizing a penalized loss with a nuclear norm penalty $\|\cdot \|_*$ \citep{fazel2002matrix, srebro2004learning}. The nuclear norm -- the sum of the singular values of a matrix -- is the matrix-variate analog to the lasso. It is non-smooth function and employing it as a penalty results in estimates that are low rank (many $0$ singular values).
+In these problems it is popular to assume a low rank structure and reconstruct the matrix by minimizing a penalized loss with a nuclear norm penalty $\|\cdot \|_*$ \citep{fazel2002matrix, srebro2004learning}. The nuclear norm -- the sum of the singular values of a matrix -- is the matrix-variate analog to the lasso. It is a non-smooth function and employing it as a penalty results in estimates that are low rank (many zero singular values).
 
-There are several extensions to the matrix completion problem that allow one to incorporate additional information. We consider the work of \citet{fithian2013scalable}: Their formulation supposes one has additional covariates for each row and column, and models each entry of the matrix as a combination of a low rank effect, and a linear function of the corresponding column and row covariates. The attack this by posing a penalized loss; with both a nuclear norm penalty, and penalties on both the column and row coefficients. We consider jointly tuning all penalty parameters, and in particular use a combination of Lasso, Group-Lasso, Ridge, and nuclear norm penalties \textcolor{red}{(is this right?)}
+There are several extensions to the matrix completion problem that allow one to incorporate additional information. We consider the work of \citet{fithian2013scalable}: Their formulation supposes one has additional covariates for each row and column, and models each entry of the matrix as a combination of a low rank effect, and a linear function of the corresponding column and row covariates. They attack this by posing a penalized loss; with both a nuclear norm penalty, and penalties on the column and row coefficients. 
+
+In our example, we consider jointly tuning all the penalty parameters, and in particular use group lasso penalties for the row and column features. This can be effective in settings where there is a natural grouping of the row and column features. For example, suppose we have standardized test scores from a student population. For each student, we have their homework scores from different subjects; for each test, we have features for different questions.
 
 More specifically, we consider an outcome matrix $M \in \mathbb{R}^{N\times N}$. Let $X\in \mathbb{R}^{N \times p}$ be the feature vectors for the rows and $Z \in \mathbb{R}^{N \times p}$ be the feature vectors for columns. We assume $M$ is of the form
 \begin{equation}
 M_{ij} = x_i \alpha + z_j \beta + \Gamma_{ij} + \epsilon_{ij}
 \end{equation}
-with $\epsilon$ iid errors. Of this matrix $M$, we only observe some subset of the positions. Let the observed matrix positions be partitioned into a training set $T$, and a validation set $V$. Let $\| \cdot \|^2_T$ denote the Frobenius norm over the entries in $T$ and similarly define $\| \cdot \|^2_V$. In addition, suppose the row and column features are composed of $G$ groups \textcolor{red}{$G$ groups each or total? Why might we have groups? This needs a clear concise sentence of motivation? It looks like you have the same groups for rows and columns. Why would we have that?}. We partition the row and column coefficient vectors $\boldsymbol{\alpha}$ and $\boldsymbol{\beta}$ into $\boldsymbol{\alpha}^{(g)}$ and $\boldsymbol{\beta}^{(g)}$ for groups $g=1,...,G$. 
+with $\epsilon$ iid errors. Of this matrix $M$, we only observe some subset of the positions. Let the observed matrix positions be partitioned into a training set $T$, and a validation set $V$. Let $\| \cdot \|^2_T$ denote the Frobenius norm over the entries in $T$ and similarly define $\| \cdot \|^2_V$. For simplicity, we suppose there are the same number of row and column feature groups $G$. We partition the row and column coefficient vectors $\boldsymbol{\alpha}$ and $\boldsymbol{\beta}$ into $\boldsymbol{\alpha}^{(g)}$ and $\boldsymbol{\beta}^{(g)}$ for groups $g=1,...,G$. 
 
 We are interested in finding the optimal regularization parameters $\boldsymbol{\lambda} = (\lambda_0, \lambda_1, ...,  \lambda_{2G})^\top$. The joint optimization problem is formulated as follows.
 \begin{equation}
@@ -665,7 +671,7 @@ We are interested in finding the optimal regularization parameters $\boldsymbol{
 	\label{eq:matrix_comp_groups}
 \end{equation}
 
-The differentiable space for $\boldsymbol{\alpha}$ is $span(\boldsymbol{I}_{\boldsymbol{I}_r(\boldsymbol\lambda)})$ where
+The differentiable space of the training criterion is the product space of the differentiable spaces of the training criterion with respect to $\boldsymbol{\alpha}$, $\boldsymbol{\beta}$, and $\boldsymbol{\Gamma}$. The differentiable space with respect to $\boldsymbol{\alpha}$ is  $span(\boldsymbol{I}_{\boldsymbol{I}_r(\boldsymbol\lambda)})$ where
 $$
 \boldsymbol{I}_r(\boldsymbol\lambda)
 = 
@@ -674,16 +680,32 @@ i | \text{index } i \text{ in } \boldsymbol{\alpha}^{(g)} \text{ where }
 \hat{\boldsymbol{\alpha}}^{(g)}(\boldsymbol{\lambda}) \ne \boldsymbol{0} \text{ for } g=1,...,G
 \})
 $$ 
-The differentiable space for $\boldsymbol{\beta}$, denoted $span(\boldsymbol{I}_{\boldsymbol{I}_c(\boldsymbol\lambda)})$, is defined similarly. The differentiable space for $\Gamma$ is the set of all matrices that have the same rank \textcolor{red}{(That have the same rank as $\Gamma$? Can we move in all those directions? I don't think we can, I think we need the singular vectors to actually be a smooth perturbation of the singular vectors of $\Gamma$)}. This follows from the fact that the nuclear norm is a lasso penalty over the singular values \textcolor{red}{(this isn't really a "fact"... are you giving the intuition? or actually giving a justification?)}. For more details, refer to the appendix. Putting this together, we have
+The differentiable space with respect to $\boldsymbol{\beta}$ is $span(\boldsymbol{I}_{\boldsymbol{I}_c(\boldsymbol\lambda)})$, which is defined similarly. Let $\{u_j\}_{j=1}^{\text{rank}(\hat{\boldsymbol{\Gamma}}(\boldsymbol{\lambda}))}$ denote a orthogonal basis of the column space of $\hat{\boldsymbol{\Gamma}}(\boldsymbol{\lambda})$. We show in the Appendix that the differentiable space with respect to $\boldsymbol{\Gamma}$ can be written as the span of an orthogonal basis $B_{\boldsymbol{\lambda}}^{(i)}$
 \begin{align}
+S_{\boldsymbol \lambda, \boldsymbol{\Gamma}} 
+%& = span \left (\left \{
+%u_j e_i^\top
+%\middle | 
+%i=1,...,N,
+%j = 1,...,\text{rank}(\hat{\boldsymbol{\Gamma}}(\boldsymbol{\lambda}))
+%\right \} \right )\\
+ & = span \left (\left \{
+B^{(i)}_{\boldsymbol{\lambda}}
+\middle | 
+i=1,...,K
+\right \} \right )
+\label{eq:nuclear_norm_diff_space}
+\end{align}
+where we let $K$ be the size of this orthogonal basis.
+Putting these together, we have that the differentiable space for this problem is
+\begin{equation}
 S_{\boldsymbol \lambda} 
-& = 
-\{
-\Gamma: rank(\Gamma) = rank(\hat{\boldsymbol{\Gamma}}(\boldsymbol{\lambda}))
-\}
+= 
+S_{\boldsymbol \lambda, \boldsymbol{\Gamma}} 
 \oplus span(\boldsymbol{I}_{\boldsymbol{I}_r(\boldsymbol\lambda)})
 \oplus span(\boldsymbol{I}_{\boldsymbol{I}_c(\boldsymbol\lambda)})
-\end{align}
+\label{eq:matrix_completion_diff_space}
+\end{equation}
 The locally equivalent joint optimization problem is therefore
 \begin{equation}
 \begin{array}{c}
@@ -705,17 +727,18 @@ The locally equivalent joint optimization problem is therefore
 \frac{1}{2|T|} 
 \left \| 
 \boldsymbol{M} 
-- \boldsymbol{X}_{I_r(\boldsymbol{\lambda})} \hat{\boldsymbol{\eta}}(\boldsymbol{\lambda})  \boldsymbol{1}^\top 
-- (\boldsymbol{Z}_{I_c(\boldsymbol{\lambda})} \hat{\boldsymbol{\gamma}}(\boldsymbol{\lambda})  \boldsymbol{1}^\top )^\top
+- \boldsymbol{X}_{I_r(\boldsymbol{\lambda})} \boldsymbol{\eta} \boldsymbol{1}^\top 
+- (\boldsymbol{Z}_{I_c(\boldsymbol{\lambda})} \boldsymbol{\gamma} \boldsymbol{1}^\top )^\top
 - \boldsymbol{\Xi}
 \right \|^2_T \\
 + \lambda_0 \| \boldsymbol\Xi \|_*
 + \sum_{g=1}^G  \lambda_g \| \boldsymbol\eta^{(g)} \|_2
 + \sum_{g=1}^G  \lambda_{G+g} \| \boldsymbol\gamma^{(g)} \|_2
 + \frac{1}{2} \epsilon \left (
-\| \boldsymbol\eta \|_2^2 + \| \boldsymbol\gamma \|_2^2 + \| \boldsymbol{\Xi}\|^2_F
-\right )\\
-\text{ and } rank(\boldsymbol{\Xi}) = rank(\hat{\boldsymbol{\Gamma}}(\boldsymbol{\lambda}))
+\| \boldsymbol\eta \|_2^2 + \| \boldsymbol\gamma \|_2^2 + \|\boldsymbol{\Xi}\|^2_F
+\right )
+\\
+\text{ and } \boldsymbol{\Xi} = \sum_{i=1}^b b_i B^{(i)}_{\boldsymbol{\lambda}} 
 \end{array}
 \label{eq:matrix_comp_groups_smooth}
 \end{equation}
